# wamex-rag-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  template.yaml
docs/: infrastructure-setup.md
frontend/: app.py
frontend/.streamlit/: config.toml
src/api/: app.py  requirements.txt
src/ingestion/: app.py
